--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=MeleeCombatSystem
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Maps/Level_1_Scene_JX_New.Level_1_Scene_JX_New
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
